# lyng-senbrd-protocol

./: .gitattributes  .gitignore  .gitlint  CMakeLists.txt  Kconfig  README.md
.github/workflows/: build.yml  compliance.yml
include/: message.h
src/: crc.h  message.c  portable.h
zephyr/: module.yml
